// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostSerializer : create : should return post 1`] = `
{
  "data": {
    "attributes": {
      "authorId": 2,
      "content": "Hello",
    },
    "id": 3,
    "type": "Post",
  },
  "links": {
    "self": {},
  },
}
`;

exports[`PostSerializer : getAll : should return array posts 1`] = `
{
  "data": {
    "attributes": {
      "posts": [
        {
          "attributes": {
            "authorId": 2,
            "content": "Hello",
          },
          "id": 2,
          "type": "Post",
        },
        {
          "attributes": {
            "authorId": 1,
            "content": "World",
          },
          "id": 2,
          "type": "Post",
        },
      ],
    },
    "id": 0,
    "type": "Posts",
  },
  "links": {
    "self": {},
  },
}
`;

exports[`PostSerializer : getOne : should return post 1`] = `
{
  "data": {
    "attributes": {
      "authorId": 2,
      "content": "Hello",
    },
    "id": 1,
    "type": "Post",
  },
  "links": {
    "self": {},
  },
}
`;
